# fedsurf

./: LICENSE  README.md
.github/workflows/: release-artifacts.yml
MacOSIcon/fedsurfIcon.icon/: icon.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fed_protocol.rs  ipc.rs  main.rs  menu.rs  tabs.rs  ua.rs
ui/: index.html  new-tab.html
ui/css/: base.css  sidebar.css  tokens.css  toolbar.css
ui/js/: keyboard.js  main.js  reorder.js  sidebar.js  store.js  toolbar.js  tooltip.js
