[package]
name = "fedsurf"
version = "0.1.0"
description = "Fedsurf — a browser for the Federate Network (fed:// + https:// + http://)"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

federate-core = { path = "../../federatenetwork/crates/federate-core" }
federate-naming = { path = "../../federatenetwork/crates/federate-naming" }
federate-uri = { path = "../../federatenetwork/crates/federate-uri" }
federate-client = { path = "../../federatenetwork/crates/federate-client" }
federate-resolution = { path = "../../federatenetwork/crates/federate-resolution" }

# WKWebView.customUserAgent must be set directly: WebviewBuilder::user_agent
# is not applied to child (multiwebview) webviews on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
